fixed scrolling issue on smaller/laptop screens

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ html{
 }
 body{
     margin:0;
-    /* background-image: url("images/bg.jpg"); */
     background: -webkit-linear-gradient(right, orange,rgb(116, 2, 2) 55%);
     position: relative;
     height: 100%;
@@ -29,7 +28,6 @@ a:hover{
 }   
 .fullpage{
     display:flex;
-    height: calc(100% - 70px)
 }
 .bookshelf{
     width:100%;
